# facilities-ai-agent

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  run_server.py
app/: __init__.py  config.py  main.py  requirements.txt
app/agents/: __init__.py
app/agents/emergency_agent/: __init__.py  agent.py
app/agents/facilities_agent/: __init__.py  agent.py
app/data/: availability.csv  customers.csv  facilities.csv  technicians.csv  work_orders.csv
app/models/: __init__.py  customer.py  facility.py  work_order.py
app/services/: __init__.py  calendar_service.py  data_service.py  email_service.py
app/static/css/: style.css
app/static/js/: app.js  audio-player.js  audio-recorder.js  pcm-player-processor.js  pcm-recorder-processor.js
app/static/templates/: index.html
app/tools/: __init__.py  booking_context.py  customer_lookup.py  datetime_parser.py  emergency.py  number_formatting.py  scheduling.py  voice_processing.py  work_order.py
app/websocket/: __init__.py  streaming.py
